--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 
     <!-- Стили -->
-    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="fonts/font.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
