fixed images pathes

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- OpenGraph -->
     <meta property="og:title" content="Нужно жёстче" />
     <meta property="og:url" content="https://ya.ru/" />
-    <meta property="og:image" content="./preview/og.png" />
+    <meta property="og:image" content="./images/preview/og.png" />
     <!-- Twitter -->
-    <meta property="twitter:card" content="./preview/poster.png" />
+    <meta property="twitter:card" content="./images/preview/poster.png" />
 
     <!-- Текущий минимальный код для favicon -->
-    <link rel="icon" href="./favicon/favicon.ico" sizes="any" />
-    <link rel="icon" href="./favicon/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./favicon/apple-touch-icon.png" />
+    <link rel="icon" href="./images/favicon/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/favicon/apple-touch-icon.png" />
 
     <!-- Стили -->
     <link rel="stylesheet" href="fonts/font.css" />
