--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <!-- OpenGraph -->
     <meta property="og:title" content="Нужно жёстче" />
     <meta property="og:url" content="https://ya.ru/" />
-    <meta property="og:image" content="./images/preview/og.png" />
+    <meta property="og:image" content="./images/og.png" />
     <!-- Twitter -->
-    <meta property="twitter:card" content="./images/preview/poster.png" />
+    <meta property="twitter:card" content="./images/poster.png" />
 
     <!-- Текущий минимальный код для favicon -->
-    <link rel="icon" href="./images/favicon/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="./images/favicon/apple-touch-icon.png" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon.png" />
 
     <!-- Стили -->
     <link rel="stylesheet" href="fonts/font.css" />
@@ -30,7 +30,7 @@
     <header>
       <h1 class="page__heading">Надо сделать идеально*</h1>
     </header>
-    <video autoplay muted loop poster="preview/poster.png">
+    <video autoplay muted loop poster="./images/poster.png">
       <source src="./video/cover-video.webm" type="video/webm" />
       <source src="./video/cover-video.mp4" type="video/mp4" />
     </video>
