--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       content="Спринт 2 Яндекс практикума: как фигачить верстку в header, вместо body"
     />
     <meta property="og:title" content="Нужно жёстче" />
+    <meta
+      property="og:description"
+      content="Спринт 2 Яндекс практикума: как фигачить верстку в header, вместо body"
+    />
     <meta property="og:url" content="https://ya.ru/" />
     <meta property="og:image" content="./images/og.png" />
     <meta property="twitter:card" content="./images/poster.png" />
@@ -20,9 +24,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <header>
-      <h1 class="page__heading">Надо сделать идеально*</h1>
-    </header>
+    <h1 class="page__heading">Надо сделать идеально*</h1>
     <video autoplay muted loop poster="./images/poster.png">
       <source src="./video/cover-video.webm" type="video/webm" />
       <source src="./video/cover-video.mp4" type="video/mp4" />
